feat: :sparkles: Se agrego un sobre nosotros

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,11 +1,15 @@
-<header-component/>
+<header-component />
 <main>
   <div class="h-full">
-    <hero-component/>
+    <hero-component [title]="'Organiza, descubre y sigue tus torneos favoritos'"
+      [subtitulo]="'Con nuestra plataforma puedes crear tu propio torneo, explorar torneos activos en tu localidad y mantenerte al día con todos los resultados y novedades.'"
+      [enlace1]="'https://wa.me/573134277875?text=Hola%20quisiera%20saber%20más%20información%20sobre%20la%20KidsLeague%F0%9F%A4%A9'"
+      [desc_enlace1]="'Contáctanos'" [icon_enlace1]="'fa fa-phone'" [enlace2]="'about-us'"
+      [desc_enlace2]="'Sobre Nosotros'" [image]="'imagen_hero.png'"></hero-component>
+
   </div>
 </main>
-<ultimospartidos-component/>
-<noticias-component/>
+<ultimospartidos-component />
+<noticias-component />
 
-<footer-component/>
-
+<footer-component />
