--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,40 +1,48 @@
 <header class="sticky top-0 z-50 border-b-4 border-amber-300">
   <nav class="bg-green-800 px-4 lg:px-6 py-2.5">
     <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
-      <!-- Logo -->
-      <a routerLink="#" class="flex items-center">
-        <img src="LOGOKIDSLEAGUE.png" class="mr-3 h-6 sm:h-9" alt="KidsLeague Logo" />
+
+
+      <a routerLink="/" class="flex items-center">
+        <img src="LOGOKIDSLEAGUE.png" class="mr-3 h-10 sm:h-12" alt="KidsLeague Logo" />
         <span class="text-white font-extrabold text-xl whitespace-nowrap">
           KIDS<span class="text-yellow-300">LEAGUE</span>
         </span>
       </a>
 
-      <!-- Botones login / registro y toggle -->
+
       <div class="flex items-center lg:order-2">
-        <a routerLink="/login"
-          class="text-white bg-green-600 hover:bg-green-700 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2">
-          Inicia Sesión
-        </a>
-        <a routerLink="/register"
-          class="text-white bg-green-700 hover:bg-green-800 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2">
-          Regístrate
-        </a>
+
+        <div class="hidden md:flex space-x-2">
+          <a routerLink="/login"
+            class="text-white bg-green-600 hover:bg-green-700 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5">
+            Inicia Sesión
+          </a>
+          <a routerLink="/register"
+            class="text-white bg-green-700 hover:bg-green-800 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5">
+            Regístrate
+          </a>
+        </div>
+
+
         <button (click)="toggleMenu()" type="button"
           class="inline-flex items-center p-2 ml-1 text-sm text-white rounded-lg lg:hidden hover:bg-green-600 focus:outline-none">
-          <span class="sr-only">Open main menu</span>
           <i *ngIf="!menuAbierto" class="fa-solid fa-bars"></i>
           <i *ngIf="menuAbierto" class="fa-solid fa-x"></i>
         </button>
       </div>
 
+
       <div [class.hidden]="!menuAbierto" class="w-full lg:flex lg:w-auto lg:order-1">
         <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
+
           <li>
-            <a routerLink="#"
+            <a routerLink="/"
               class="block py-2 pr-4 pl-3 text-white rounded bg-green-700 lg:bg-transparent lg:text-white lg:p-0">Inicio</a>
           </li>
           <li>
-            <a routerLink="#" class="block py-2 pr-4 pl-3 text-white hover:bg-green-600 lg:hover:bg-transparent lg:p-0">Sobre
+            <a routerLink="about-us"
+              class="block py-2 pr-4 pl-3 text-white hover:bg-green-600 lg:hover:bg-transparent lg:p-0">Sobre
               Nosotros</a>
           </li>
           <li>
@@ -53,6 +61,19 @@
             <a routerLink="#"
               class="block py-2 pr-4 pl-3 text-white hover:bg-green-600 lg:hover:bg-transparent lg:p-0">Ganadores</a>
           </li>
+
+
+          <li class="md:hidden mt-2">
+            <a routerLink="/login"
+              class="block text-white bg-green-600 hover:bg-green-700 font-medium rounded-lg text-sm px-4 py-2 mb-1">
+              Inicia Sesión
+            </a>
+            <a routerLink="/register"
+              class="block text-white bg-green-700 hover:bg-green-800 font-medium rounded-lg text-sm px-4 py-2">
+              Regístrate
+            </a>
+          </li>
+
         </ul>
       </div>
     </div>
