--- a/src/app/components/home/hero/hero.component.html
+++ b/src/app/components/home/hero/hero.component.html
@@ -3,26 +3,25 @@
 
     <div class="mr-auto place-self-center lg:col-span-7">
       <h1 class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl">
-        Organiza, descubre y sigue tus torneos favoritos
+        {{title}}
       </h1>
       <p class="max-w-2xl mb-8 font-light text-gray-600 lg:mb-10 md:text-lg lg:text-xl">
-        Con nuestra plataforma puedes crear tu propio torneo, explorar torneos activos en tu localidad y mantenerte al día con todos los resultados y novedades.
+        {{subtitulo}}
       </p>
 
       <div class="flex flex-col sm:flex-row gap-4">
-        <a href="#" class="inline-flex items-center justify-center px-6 py-3 text-base font-medium text-center text-white rounded-lg bg-emerald-600 hover:bg-emerald-700 focus:ring-4 focus:ring-emerald-300 transition-transform hover:scale-105">
-          Contáctanos
-          <i class="fa fa-phone ml-2" aria-hidden="true"></i>
+        <a [href]="[enlace1]" target="_blank" class="inline-flex items-center justify-center px-6 py-3 text-base font-medium text-center text-white rounded-lg bg-emerald-600 hover:bg-emerald-700 focus:ring-4 focus:ring-emerald-300 transition-transform hover:scale-105">
+          {{desc_enlace1}}
+          <i [class]="icon_enlace1 + ' ml-2'"></i>
         </a>
-        <a href="#" class="inline-flex items-center justify-center px-6 py-3 text-base font-medium text-center text-emerald-800 bg-emerald-100 border border-emerald-300 rounded-lg hover:bg-emerald-200 focus:ring-4 focus:ring-emerald-200 transition-transform hover:scale-105">
-          Explora Torneos
+        <a [href]="[enlace2]" class="inline-flex items-center justify-center px-6 py-3 text-base font-medium text-center text-emerald-800 bg-emerald-100 border border-emerald-300 rounded-lg hover:bg-emerald-200 focus:ring-4 focus:ring-emerald-200 transition-transform hover:scale-105">
+          {{desc_enlace2}}
         </a>
       </div>
     </div>
 
     <div class="hidden lg:mt-0 lg:col-span-5 lg:flex animate-float">
-      <img src="imagen_hero.png" alt="Plataforma de torneos en un dispositivo" class=" drop-shadow-2xl drop-shadow-emerald-200/80">
+      <img [src]="image" class=" drop-shadow-2xl drop-shadow-emerald-200/80">
     </div>
-
   </div>
 </section>
