feat: :construction: hammer: Se agrego login y registro UI, tambien se añadio el mdulo eventos y esta comenzando

--- a/src/app/components/about-us/equipo-desarrollo/equipo-desarrollo.component.html
+++ b/src/app/components/about-us/equipo-desarrollo/equipo-desarrollo.component.html
@@ -1,1 +1,76 @@
-<p>equipo-desarrollo works!</p>,
+<section class="max-w-screen-xl mx-auto px-4 py-8">
+  <h2 class="text-2xl font-bold mb-6 text-center">Equipo de Desarrollo</h2>
+
+  <div class="flex flex-col gap-6 lg:grid lg:grid-cols-4 lg:gap-6">
+    <!-- Full Stack -->
+    <div class="bg-white rounded-lg shadow-md overflow-hidden text-center border-2 border-amber-300">
+      <img src="https://i.ibb.co/HLNFc3sq/1756741137415.jpg" alt="Full Stack" class="w-full h-64 object-cover" />
+      <div class="p-4">
+        <h3 class="font-bold text-lg">Ayelmer Corzo</h3>
+        <p class="text-gray-600">Desarrollador Full Stack Junior</p>
+        <!-- Redes -->
+        <div class="flex justify-center space-x-4 mt-2 text-gray-600">
+          <a href="https://www.linkedin.com/in/ayelmercorzob/" target="_blank" class="hover:text-green-600">
+            <i class="fab fa-linkedin fa-lg"></i>
+          </a>
+          <a href="https://github.com/AyelmerCorzoB" target="_blank" class="hover:text-yellow-900">
+            <i class="fab fa-github fa-lg"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Frontend -->
+    <div class="bg-white rounded-lg shadow-md overflow-hidden text-center border-2 border-amber-300">
+      <img src="https://i.ibb.co/vx9hkN82/1741192552226.jpg" alt="Frontend 2" class="w-full h-64 object-cover" />
+
+      <div class="p-4">
+        <h3 class="font-bold text-lg">Elidallana Cristancho</h3>
+        <p class="text-gray-600">Desarrolladora Frontend</p>
+        <div class="flex justify-center space-x-4 mt-2 text-gray-600">
+          <a href="https://www.linkedin.com/in/elidallanacristancho/" target="_blank" class="hover:text-green-600">
+            <i class="fab fa-linkedin fa-lg"></i>
+          </a>
+          <a href="https://github.com/Elidallanacristanchocaceres" target="_blank" class="hover:text-yellow-900">
+            <i class="fab fa-github fa-lg"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Frontend -->
+    <div class="bg-white rounded-lg shadow-md overflow-hidden text-center border-2 border-amber-300">
+      <img src="https://i.ibb.co/201dSD3D/1741805186845.jpg" alt="Frontend 1" class="w-full h-64 object-cover" />
+
+      <div class="p-4">
+        <h3 class="font-bold text-lg">Karen Cristancho</h3>
+        <p class="text-gray-600">Desarrolladora Frontend</p>
+        <div class="flex justify-center space-x-4 mt-2 text-gray-600">
+          <a href="https://www.linkedin.com/in/karencristancho/" target="_blank" class="hover:text-green-600">
+            <i class="fab fa-linkedin fa-lg"></i>
+          </a>
+          <a href="https://github.com/KarenLore" target="_blank" class="hover:text-yellow-900">
+            <i class="fab fa-github fa-lg"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Recursos / Ideas -->
+    <div class="bg-white rounded-lg shadow-md overflow-hidden text-center border-2 border-amber-300">
+      <img src="https://i.ibb.co/PsX7q35R/1743105290938.jpg" alt="Recursos e Ideas" class="w-full h-64 object-cover" />
+      <div class="p-4">
+        <h3 class="font-bold text-lg">Erick Arias</h3>
+        <p class="text-gray-600">Apoyo Creativo & Recursos</p>
+        <div class="flex justify-center space-x-4 mt-2 text-gray-600">
+          <a href="https://www.linkedin.com/in/erick-arias-dev/" target="_blank" class="hover:text-green-600">
+            <i class="fab fa-linkedin fa-lg"></i>
+          </a>
+          <a href="https://github.com/ErickJarias" target="_blank" class="hover:text-yellow-900">
+            <i class="fab fa-github fa-lg"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
