--- a/src/app/components/home/noticias/noticias.component.html
+++ b/src/app/components/home/noticias/noticias.component.html
@@ -6,8 +6,8 @@
       <iframe class="w-full h-48 sm:h-56" src="https://www.youtube.com/embed/KKZSGJvQLnY?si=Knn0TfKw1JvlmbkY"
               title="YouTube preview" frameborder="0" allowfullscreen></iframe>
       <div class="p-4">
-        <h3 class="font-semibold text-lg mb-2">Noticia 1</h3>
-        <p class="text-gray-600 text-sm">Resumen breve de la noticia para que el usuario tenga una idea rápida.</p>
+        <h3 class="font-semibold text-lg mb-2">FINAL TORENO M24</h3>
+        <p class="text-gray-600 text-sm">Final del torneo M24, organizado por el popular Coco, con los equipos Florentina y Nápolis. El equipo ganador se lleva 1.500.000 pesos.</p>
       </div>
     </div>
 
@@ -15,8 +15,8 @@
       <iframe class="w-full h-48 sm:h-56" src="https://www.youtube.com/embed/KKZSGJvQLnY?si=Knn0TfKw1JvlmbkY"
               title="YouTube preview" frameborder="0" allowfullscreen></iframe>
       <div class="p-4">
-        <h3 class="font-semibold text-lg mb-2">Noticia 2</h3>
-        <p class="text-gray-600 text-sm">Resumen breve de la noticia para que el usuario tenga una idea rápida.</p>
+        <h3 class="font-semibold text-lg mb-2">FINAL TORENO M24</h3>
+        <p class="text-gray-600 text-sm">Final del torneo M24, organizado por el popular Coco, con los equipos Florentina y Nápolis. El equipo ganador se lleva 1.500.000 pesos.</p>
       </div>
     </div>
 
@@ -24,8 +24,8 @@
       <iframe class="w-full h-48 sm:h-56" src="https://www.youtube.com/embed/KKZSGJvQLnY?si=Knn0TfKw1JvlmbkY"
               title="YouTube preview" frameborder="0" allowfullscreen></iframe>
       <div class="p-4">
-        <h3 class="font-semibold text-lg mb-2">Noticia 3</h3>
-        <p class="text-gray-600 text-sm">Resumen breve de la noticia para que el usuario tenga una idea rápida.</p>
+        <h3 class="font-semibold text-lg mb-2">FINAL TORENO M24</h3>
+        <p class="text-gray-600 text-sm">Final del torneo M24, organizado por el popular Coco, con los equipos Florentina y Nápolis. El equipo ganador se lleva 1.500.000 pesos.</p>
       </div>
     </div>
   </div>
