--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,81 +1,69 @@
 <header class="sticky top-0 z-50 border-b-4 border-amber-300">
   <nav class="bg-green-800 px-4 lg:px-6 py-2.5">
-    <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
+    <div class="flex justify-between items-center mx-auto max-w-screen-xl">
 
-
+      <!-- Logo -->
       <a routerLink="/" class="flex items-center">
         <img src="LOGOKIDSLEAGUE.png" class="mr-3 h-10 sm:h-12" alt="KidsLeague Logo" />
-        <span class="text-white font-extrabold text-xl whitespace-nowrap">
+        <span class="text-white font-extrabold text-xl">
           KIDS<span class="text-yellow-300">LEAGUE</span>
         </span>
       </a>
 
+      <!-- Enlaces + botones en desktop -->
+      <div class="hidden lg:flex items-center space-x-6">
+        <ul class="flex space-x-6 text-white font-medium">
+          <li><a routerLink="/" class="hover:text-yellow-200">Inicio</a></li>
+          <li><a routerLink="about-us" class="hover:text-yellow-200">Sobre Nosotros</a></li>
+          <li><a routerLink="eventos" class="hover:text-yellow-200">Eventos</a></li>
+          <li><a routerLink="#" class="hover:text-yellow-200">Clasificaciones</a></li>
+          <li><a routerLink="#" class="hover:text-yellow-200">Árbitros</a></li>
+          <li><a routerLink="#" class="hover:text-yellow-200">Ganadores</a></li>
+        </ul>
 
-      <div class="flex items-center lg:order-2">
-
-        <div class="hidden md:flex space-x-2">
+        <div class="flex space-x-2 ml-6">
           <a routerLink="/login"
-            class="text-white bg-green-600 hover:bg-green-700 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5">
+            class="text-white bg-green-600 hover:bg-green-700 font-medium rounded-lg text-sm px-4 py-2">
             Inicia Sesión
           </a>
           <a routerLink="/register"
-            class="text-white bg-green-700 hover:bg-green-800 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5">
+            class="text-white bg-green-700 hover:bg-green-800 font-medium rounded-lg text-sm px-4 py-2">
             Regístrate
           </a>
         </div>
-
-
-        <button (click)="toggleMenu()" type="button"
-          class="inline-flex items-center p-2 ml-1 text-sm text-white rounded-lg lg:hidden hover:bg-green-600 focus:outline-none">
-          <i *ngIf="!menuAbierto" class="fa-solid fa-bars"></i>
-          <i *ngIf="menuAbierto" class="fa-solid fa-x"></i>
-        </button>
       </div>
 
+      <!-- Botón hamburguesa (solo móvil) -->
+      <button (click)="toggleMenu()" type="button"
+        class="lg:hidden inline-flex items-center p-2 text-white rounded-lg hover:bg-green-600 focus:outline-none">
+        <i *ngIf="!menuAbierto" class="fa-solid fa-bars"></i>
+        <i *ngIf="menuAbierto" class="fa-solid fa-x"></i>
+      </button>
+    </div>
 
-      <div [class.hidden]="!menuAbierto" class="w-full lg:flex lg:w-auto lg:order-1">
-        <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
+    <!-- Menú móvil -->
+    <div *ngIf="menuAbierto" class="lg:hidden mt-3 bg-green-700 rounded-lg p-3">
+      <ul class="flex flex-col space-y-2">
+        <li><a routerLink="/" (click)="toggleMenu()" class="block text-white hover:text-yellow-200">Inicio</a></li>
+        <li><a routerLink="about-us" (click)="toggleMenu()" class="block text-white hover:text-yellow-200">Sobre Nosotros</a></li>
+        <li><a routerLink="eventos" (click)="toggleMenu()" class="block text-white hover:text-yellow-200">Eventos</a></li>
+        <li><a routerLink="#" (click)="toggleMenu()" class="block text-white hover:text-yellow-200">Clasificaciones</a></li>
+        <li><a routerLink="#" (click)="toggleMenu()" class="block text-white hover:text-yellow-200">Árbitros</a></li>
+        <li><a routerLink="#" (click)="toggleMenu()" class="block text-white hover:text-yellow-200">Ganadores</a></li>
 
-          <li>
-            <a routerLink="/"
-              class="block py-2 pr-4 pl-3 text-white rounded bg-green-700 lg:bg-transparent lg:text-white lg:p-0">Inicio</a>
-          </li>
-          <li>
-            <a routerLink="about-us"
-              class="block py-2 pr-4 pl-3 text-white hover:bg-green-600 lg:hover:bg-transparent lg:p-0">Sobre
-              Nosotros</a>
-          </li>
-          <li>
-            <a routerLink="#"
-              class="block py-2 pr-4 pl-3 text-white hover:bg-green-600 lg:hover:bg-transparent lg:p-0">Eventos</a>
-          </li>
-          <li>
-            <a routerLink="#"
-              class="block py-2 pr-4 pl-3 text-white hover:bg-green-600 lg:hover:bg-transparent lg:p-0">Clasificaciones</a>
-          </li>
-          <li>
-            <a routerLink="#"
-              class="block py-2 pr-4 pl-3 text-white hover:bg-green-600 lg:hover:bg-transparent lg:p-0">Árbitros</a>
-          </li>
-          <li>
-            <a routerLink="#"
-              class="block py-2 pr-4 pl-3 text-white hover:bg-green-600 lg:hover:bg-transparent lg:p-0">Ganadores</a>
-          </li>
-
-
-          <li class="md:hidden mt-2">
-            <a routerLink="/login"
-              class="block text-white bg-green-600 hover:bg-green-700 font-medium rounded-lg text-sm px-4 py-2 mb-1">
-              Inicia Sesión
-            </a>
-            <a routerLink="/register"
-              class="block text-white bg-green-700 hover:bg-green-800 font-medium rounded-lg text-sm px-4 py-2">
-              Regístrate
-            </a>
-          </li>
-
-        </ul>
-      </div>
+        <!-- Botones login/register en móvil -->
+        <li class="pt-2 border-t border-green-600">
+          <a routerLink="/login" (click)="toggleMenu()"
+            class="block w-full text-center text-white bg-green-600 hover:bg-green-700 rounded-lg px-4 py-2 mb-2">
+            Inicia Sesión
+          </a>
+          <a routerLink="/register" (click)="toggleMenu()"
+            class="block w-full text-center text-white bg-green-700 hover:bg-green-800 rounded-lg px-4 py-2">
+            Regístrate
+          </a>
+        </li>
+      </ul>
     </div>
   </nav>
 </header>
+
