--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,1 +1,50 @@
-<p>login-page works!</p>
+<!-- component -->
+<div class="bg-gradient-to-r from-green-300 to-green-200 flex flex-col lg:flex-row justify-center items-center min-h-screen">
+  <!-- Left: Image -->
+  <div class="w-full lg:w-1/2 h-64 lg:h-screen hidden lg:block">
+    <img src="1.png" alt="Placeholder Image" class="object-cover w-full h-full rounded-l-lg bg-green-100">
+  </div>
+
+  <!-- Right: Login Form -->
+  <div class="w-full  lg:w-1/2 rounded-lg lg:rounded-l-none  p-8 md:p-16 flex flex-col justify-center">
+    <h1 class="text-3xl font-bold text-gray-800 mb-6 text-center">Login</h1>
+    <form action="/" class="space-y-4">
+      <!-- Username Input -->
+      <div>
+        <label for="username" class="block text-gray-600 mb-1">Usuario</label>
+        <input type="text" id="username" name="username"
+          class="w-full border bg-white border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:ring-2 focus:ring-green-400 focus:border-transparent"
+          autocomplete="off">
+      </div>
+
+      <!-- Password Input -->
+      <div>
+        <label for="password" class="block text-gray-600 mb-1">Contraseña</label>
+        <input type="password" id="password" name="password"
+          class="w-full border bg-white border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:ring-2 focus:ring-green-400 focus:border-transparent"
+          autocomplete="off">
+      </div>
+
+      <!-- Remember Me Checkbox -->
+      <div class="flex items-center">
+        <input type="checkbox" id="remember" name="remember" class="h-4 w-4 text-green-500 focus:ring-green-400 border-gray-300 rounded">
+        <label for="remember" class="ml-2 block text-gray-700">Recordar</label>
+      </div>
+
+      <!-- Forgot Password Link -->
+      <div class="text-right">
+        <a href="#" class="text-green-500 hover:underline">Olvidaste la contraseña?</a>
+      </div>
+
+      <!-- Login Button -->
+      <button type="submit"
+        class="w-full bg-green-500 hover:bg-green-600 text-white font-semibold rounded-md py-2 mt-2 transition-colors duration-200">Entrar</button>
+    </form>
+
+    <!-- Sign up Link -->
+    <div class="mt-6 text-center">
+      <span class="text-gray-600 mr-1">No tienes una cuenta?</span>
+      <a routerLink="/register" class="text-green-500 font-semibold hover:underline">Registrate aqui</a>
+    </div>
+  </div>
+</div>
