--- a/src/app/pages/sobre-nosotros-page/sobre-nosotros-page.component.html
+++ b/src/app/pages/sobre-nosotros-page/sobre-nosotros-page.component.html
@@ -2,7 +2,7 @@
 <main>
   <div class="h-full">
     <hero-component
-      [title]="'Somos Kids League'"
+      [title]="'Somos City Champions'"
       [subtitulo]="
         'una organización dedicada a la promoción y desarrollo del fútbol regional. Nuestro equipo está compuesto por apasionados del deporte y educadores experimentados que comparten la visión de fomentar valores y habilidades en los jugadores a través del futbol.'
       "
