--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,9 @@
 <footer class="bg-gray-100">
   <div class="mx-auto max-w-5xl px-4 py-5 sm:px-6 lg:px-8">
     <div class="flex justify-center text-teal-600">
-      <img src="1.png" alt="" class="h-30">
+      <a routerLink="/">
+        <img src="1.png" alt="" class="h-30">
+      </a>
     </div>
 
     <p class="mx-auto mt-6 max-w-md text-center leading-relaxed text-gray-500">
@@ -11,23 +13,23 @@
 
     <ul class="mt-12 flex flex-wrap justify-center gap-6 md:gap-8 lg:gap-12">
       <li>
-        <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="#"> Sobre nosotros </a>
+        <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="/about-us"> Sobre nosotros </a>
       </li>
 
       <li>
-        <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="#"> Eventos </a>
+        <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="/eventos"> Eventos </a>
       </li>
 
       <li>
-        <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="#"> Clasificaciones </a>
+        <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="/clasificaciones"> Clasificaciones </a>
       </li>
 
       <li>
-        <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="#"> Arbitros </a>
+        <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="/arbitros"> Arbitros </a>
       </li>
 
       <li>
-        <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="#"> Ganadores </a>
+        <a class="text-gray-700 transition hover:text-gray-700/75" routerLink="/ganadores"> Ganadores </a>
       </li>
 
     </ul>
